ht/deployment_ht.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ht-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ht
  template: 
    metadata:
      labels:
        app: ht
    spec:
      containers:
      - name: rest
        image: giriraj789/tester:v1
        ports:
        - containerPort: 8090
---
apiVersion: v1
kind: Service
metadata:
  name: ht-svc
spec:
  selector:
    app: ht
  ports:
    - protocol: TCP
      port: 8090
      targetPort: 8090
